RESOLVED FIXED 246596
CSS Keyframes names can't be CSS wide keywords
https://bugs.webkit.org/show_bug.cgi?id=246596
Summary CSS Keyframes names can't be CSS wide keywords
Dean Jackson
Reported 2022-10-16 13:42:52 PDT
The CSS Animations and CSS Values specifications forbid keyframes names to be CSS wide keywords, and "default", and "none".
Attachments
Radar WebKit Bug Importer
Comment 1 2022-10-16 13:43:10 PDT
Dean Jackson
Comment 2 2022-10-16 13:44:53 PDT
EWS
Comment 3 2022-10-17 12:29:03 PDT
Committed 255640@main (d71fb1b829e7): <https://commits.webkit.org/255640@main> Reviewed commits have been landed. Closing PR #5432 and removing active labels.
Note You need to log in before you can comment on or make changes to this bug.