CSS Keyframes names can't be CSS wide keywords https://bugs.webkit.org/show_bug.cgi?id=246596 rdar://101226253

Reviewed by Tim Nguyen.

The CSS Animations and CSS Values specifications require identifier-based
keyframes names to not be CSS wide keywords, nor "default", nor "none".

* LayoutTests/imported/w3c/web-platform-tests/css/css-animations/parsing/keyframes-name-invalid-expected.txt:
* Source/WebCore/css/parser/CSSParserImpl.cpp:
(WebCore::CSSParserImpl::consumeKeyframesRule): Forbid the invalid names.

Canonical link: https://commits.webkit.org/255640@main